[package]
name = "zland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
slog = "2.7.0"
slog-async = "2.8.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.0"
smithay = "0.3.0"
